network_policies/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web
