network_policies/namespace-selector-with-ip-block-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-demo-with-ip-block-egress
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: security
  egress:
  - to:
    - ipBlock:
        cidr: 8.8.8.8/32
